feat: Add pipeline